possible fix for widget spacing on mobile?

--- a/main.css
+++ b/main.css
@@ -89,4 +89,7 @@ body {
   #quote {
     text-align: center;
   }
+  .temperature-and-covid-container {
+    gap: 2rem;
+  }
 }
